completed the boilet plate installation for contact and thankyou pages. Completed the hero,nav and into for mobile viewports

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="keywords" content="HTML5, CSS3, JavaScript" />
   <meta name="description" content="UX Portfolio for Joseph Percival" />
   <meta name="keywords" content="HTML, CSS, JavaScript" />
-  <meta name="author" content="Joseph Percival" />
+  <meta name="author" content="Come Together Huc - Charity Organisation Website" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JPercival-UX</title>
+  <title>Come Together</title>
   <link rel="icon" href="img/favicon.ico" type="image/jpeg" />
   <script defer="" src="scripts/dynamic-script.js"></script>
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -24,12 +24,11 @@
       <a class="logo" href="/index.html">
         <div class="logo-placeholder">
           <div class="company-logo" alt="company logo">
-            <img src="/img/brand-logo.svg" alt="">
+            <img src="/img/come-together-logo-sm.svg" alt="">
           </div>
         </div>
         <div class="logo-container">
-          <div class="logo-name">Joseph Percival</div>
-          <div class="logo-title">UX DESIGNER & WEB DEVELOPER</div>
+          <div class="logo-name">Come Together Hub</div>
         </div>
       </a>
       <nav>
@@ -78,114 +77,66 @@
     </div>
   </div>
 
+  <div class="small-donation-section">
+    <div class="container">
+      <div class="small-header">
+        <h1>
+          Donate this winter to help the homeless or families facing homelessness.
+        </h1>
+      </div>
+      <div class="editorial">
+        <p>A small donation will help the most vulnerable this winter from the harshest of weather. You may want to
+          donate items or cash. </p>
+        <p>£10 will help to provide clothes to the homeless.</p>
+      </div>
+      <div class="slider-section"></div>
+      <button class="primary-button">Donate</button>
+      <button class="primary-button">Donate</button>
+    </div>
+  </div>
+
   <section class="hero-container">
-    <div class="hero-text-content">
-      <div class="hero-title">
-        Beautifully Crafted Web <br> Experiences to enhance <br>
-      </div>
-      <span class="txt-rotate" data-period="2000"
-        data-rotate='[ "Business Impact","User Experience", "Customer Retention" ]'>
-      </span>
-      <p>Hi I'm Joe. I am a UX Researcher, Designer and a Front End Web Developer, based in Merseyside.
-        <br>Having 3 years commercial experience Designing and Developing Projects for Coca-Cola, Burt's Bee's or
-        L'oreal for example plus graduating with a First Class BSc(Hons) degree in the discipline's of Web Design
-        and Development from Edge Hill University in Lancashire.
-        <br> I am available for contract or full time positions in Design or Front End projects.
-      <div class="hero-button-container">
-        <a href="#work" class="primary-button">Projects</a>
-        <a href="/contact-form.html" class="secondary-button">Contact me</a>
-      </div>
-
-      <div class="mouse-scroller">
-        <div class="mouse">
-          <div class="mouse-animation"></div>
-        </div>
-      </div>
-
-    </div>
-    <div class="col">
-      <img class="hero-index-vector" src="img/thank-you-bkg.svg" alt="">
-    </div>
-    <!-- end of hero section  -->
   </section>
-  <section class="tools">
-    <div class="col">
-      <img class="tools-image" src="/img/figma-logo.svg" width="100" height="100" alt="figma-branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/adobe-xd-logo.svg" width="100" height="100" alt="adobe XD branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/adobe-photoshop-logo.svg" width="100" height="100"
-        alt="adobe Photoshop branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/adobe-illustrator-logo.svg" width="100" height="100"
-        alt="adobe Illustrator branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/zeplin-logo.svg" width="100" height="100" alt="figma-branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/html5-logo.svg" width="100" height="100" alt="HTML5 branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/css3-logo.svg" width="100" height="100" alt="CSS3 branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/js-logo.svg" width="100" height="100" alt="Vanilla JS branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/sass-logo.svg" width="100" height="100" alt="Vanilla JS branding">
-    </div>
-    <div class="col">
-      <img class="tools-image" src="/img/github-logo.svg" width="100" height="100" alt="Vanilla JS branding">
-    </div>
-  </section>
+  <!-- end of hero section  -->
+
   <section class="research-qoute">
     <div class="qoute-text">
       <p>
-        “No product is an island. A product is more than the finished product. It is a cohesive, integrated set of
-        experience's.
-        Think through all of the stages of a product or service – from initial intentions through to the final
-        reflections,
-        from first usage to help, service, and maintenance. Make them all work together seamlessly - this is UX
-        Design.” </p>
-      <br><sub>Don Norman - Nielson Norman Group</sub>
+        “The true measure of any society can be found in how it treats it's most vulnerable members.” </p>
+      <br><sub>- Mahatma Gandhi</sub>
     </div>
   </section>
 
   <section class="featured">
     <div class="left">
       <div class="inner">
-        <p class="subtitle">
-          Featured Project</p>
         <div class="featured-title">
-          <h2>Just Speak Guitar Lessons</h2>
+          <h2>Helping To Transform Lives</h2>
         </div>
+        <img src="/img/the-og's.png" alt="the originally formed team for the charity">
         <div class="featured-desc">
-          <p> Inspired by a UX meetup on Voice technology advancement's and discovering that navigating a website
-            or
-            application vocally was
-            just an unexplored idea, I set my self the task to Measure The Feasibility of Vocally Navigating a Website
-            for my
-            University Degree Dissertation, using
-            a non-AI voice Controlled
-            System which resulted in a complete success - a First Class with Honors success to be exact (had to crow
-            bar that in there). You can find this
-            in the
-            <a href="#work" class="primary-button">projects</a> section.
+          <h2>Together We Can Make A Difference</h2>
+          <p>Come together started in Dec 2020, as we approached lifting of Covid-19 government guidelines, we felt it
+            was an ideal time to provide a floating support service. After spending many years
+            struggling with addiction problems, homelessness and poor mental health.
+            I found it difficult to access services, the difficulty was not down to the services it was due to my own
+            issues. After finally getting the help I needed in 2012 I spent the best part of my own recovery studying
+            and researching services and issues that I faced. As we approached covid restrictions being lifted it became
+            apparent that the need for a support service was greater than ever! - so myself, my partner and some friends
+            decided that we was going to act!
           </p>
+          <p>We acquired 2 venues and created a voluntary organisation where people can come together to support the
+            homeless, those who have drug and alcohol issues and those suffering from mental ill health. This is just
+            the very start and we aim to reach as many people as possible and provide as much support as required. We
+            aim to walk hand in hand with those individuals who need support and ensure they know they are not alone.
+            The aim of our community group is to come together and strive towards happier and healthier Communities for
+            all.
+          </p>
+          <span class="signature">- Mat</span>
         </div>
       </div>
     </div>
-    <div class="right">
-      <img src="/img/guitar-lesson-banner.PNG" width="100" height="100" alt="remind me project image" />
-      <button>
-        <a class="primary-button" href="/guitar-tutorial.html" aria-hidden="true" role="none" tabindex='-1'
-          title="Click this link to see this Projects Case Study">Case Study</a>
-      </button>
-    </div>
+
   </section>
 
   <div class="skills" id="skills">
