improved logo vector, fixed nav bar issues, replace and added images and styled indes >=620px

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <h1>Events</h1>
           </div>
           <div class="multi-editorial-banners">
+            <img src="/img/christmas-party-event.svg" alt="christmas hamper donation banner">
             <img src="/img/christmas-hamper.svg" alt="christmas hamper donation banner">
             <img src="/img/workshop.svg" alt="regular charity event banner">
             <img src="/img/events.svg" alt="promotional event banner">
