ammended html and css for the navigation for larger viewports

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul>
             <li><a href="#welcome">Welcome</a></li>
             <li><a href="#aboutUs">About Us</a></li>
-            <li><a href="#communityCare">Community Care</a></li>
+            <li><a href="#communityCare">Local Care</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#contactUs">Join Us</a></li>
             <li><button type="button" class="primary-button">
@@ -182,7 +182,7 @@
       <div class="card-grid_start">
         <div class="inner">
           <div id="communityCare" class="editorial-title">
-            <h1>Community Care</h1>
+            <h1>Local Care</h1>
           </div>
           <p>
             Part of our ethos is to keep a positive outlook on life! Some say that charity start's at home, we do love
@@ -260,10 +260,12 @@
 
     <section id="contact-page" class="contact-page-section">
       <div class="contact-container">
-      
+
         <!-- contact form  -->
         <div class="contact-form">
-          <h2>Contact Us</h2>
+          <div class="form-title">
+            <h2>Contact Us</h2>
+          </div>
           <div class="contact-form-container">
             <div class="left">
               <form action="https://formsubmit.co/joseph.m.percival@gmail.com" method="POST">
