made index responsive <=1550px

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div id="gallery-item_2" class="thumbnail-item">
               <a href="#light-box-item_3">
                 <img src="/img/events.svg" alt="promotional event banner">
-                <h3 class="thumbnail__desc">Various Freely Available Support Group's</h3>
+                <h3 class="thumbnail__desc">Various Available Support Group's</h3>
                 <p class="thumbnail__editorial">Click for more details...</p>
               </a>
             </div>
