lightbox completely functional and responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="modal active">
       <div class="contact-modal-title">My Contact Details</div>
       <div class="close-modal" onClick="toggleModal()">
-        <svg class="close-icon">
-          <path fill="#8c3921"
+        <svg class="close-icon" viewBox="2 2 20 20">
+          <path fill="#8c3921" viewbox="0 0 20 20"
             d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z" />
         </svg>
       </div>
@@ -262,7 +262,7 @@
             <div id="gallery-item_2" class="thumbnail-item">
               <a href="#light-box-item_3">
                 <img src="/img/events.svg" alt="promotional event banner">
-                <h3 class="thumbnail__desc">Various Available Support Group's</h3>
+                <h3 class="thumbnail__desc">Various Available Support Group's 2021</h3>
                 <p class="thumbnail__editorial">Click for more details...</p>
               </a>
             </div>
@@ -385,7 +385,7 @@
                   <label>
                     <!-- customer description  -->
                     <textarea class="text-field" name="description" cols="40" rows="3"
-                      placeholder="Write your message here" title="Please leave a quick message here"
+                      placeholder="Write your message here (e.g) Donating an item or about joining our team ..." title="Please leave a quick message here"
                       required></textarea>
                   </label>
                 </div>
