contact form styled to pec and 100% responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="modal active">
       <div class="contact-modal-title">My Contact Details</div>
       <div class="close-modal" onClick="toggleModal()">
-        <svg class="close-icon" viewBox="2 2 20 20">
-          <path fill="#8c3921" viewbox="0 0 20 20"
+        <svg class="close-icon" viewBox="2 2 2000 2000">
+          <path fill="#8c3921"
             d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z" />
         </svg>
       </div>
@@ -274,8 +274,8 @@
             <!-- Christmas Party Light box  -->
             <div id="light-box-item_1" class="events-lightbox">
               <div class="events-lightbox__content">
-                <a href="#gallery-item_1" class="close"> <svg class="close-icon" viewBox="2 2 20 20">
-                    <path fill="#8c3921" viewbox="0 0 20 20"
+                <a href="#gallery-item_1" class="close"> <svg class="close-icon" viewBox="2 2 2000 2000">
+                    <path fill="#8c3921"
                       d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z" />
                   </svg> </a>
                 <div class="item"><a href=""><img src="/img/christmas-party-event.svg"
@@ -286,8 +286,8 @@
             <!-- Christmas Hamper Light box  -->
             <div id="light-box-item_2" class="events-lightbox">
               <div class="events-lightbox__content">
-                <a href="#gallery-item_2" class="close"> <svg class="close-icon"  viewBox="2 2 20 20">
-                    <path fill="#8c3921" viewbox="0 0 20 20"
+                <a href="#gallery-item_2" class="close"> <svg class="close-icon" viewBox="2 2 2000 2000">
+                    <path fill="#8c3921" 
                       d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z" />
                   </svg> </a>
                 <div class="item"><a href=""><img src="/img/christmas-hamper.svg"
@@ -298,8 +298,8 @@
             <!-- Better Future Light box  -->
             <div id="light-box-item_3" class="events-lightbox">
               <div class="events-lightbox__content">
-                <a href="#gallery-item_3" class="close"> <svg class="close-icon" viewBox="2 2 20 20">
-                    <path fill="#8c3921" viewbox="0 0 20 20"
+                <a href="#gallery-item_3" class="close"> <svg class="close-icon" viewBox="2 2 2000 2000">
+                    <path fill="#8c3921"
                       d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z" />
                   </svg> </a>
                 <div class="item"><a href=""><img src="/img/events.svg" alt="promotional event banner"></a></div>
@@ -394,8 +394,21 @@
                 </div>
               </form>
             </div>
+            <div class="right">
+              <div class="contact-form__logo-container">
+                <div class="logo-container">
+                  <div class="image-container">
+                    <img src="/img/contact-form-logo.svg" alt="">
+                  </div>
+                  <div class="logo-title">Come Together Hub</div>
+                  <div class="logo-subtitle">Making a better future for everyone.</div>
+                  <div class="logo-subtitle">Established: 2020</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
     </section>
 
