updated the thankyou page with new navbar and footer

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <img src="/img/the-og's.jpg" alt="the originally formed team for the charity">
           <div class="editorial-desc">
             <h2>Together We Can Make A Difference</h2>
-            <p>Come together started in Dec 2020, as we approached lifting of Covid-19 government guidelines, we felt it
+            <p>Come together started in 28th August 2021, as we approached lifting of Covid-19 government guidelines, we felt it
               was an ideal time to provide a floating support service. After spending many years
               struggling with addiction problems, homelessness and poor mental health.
               I found it difficult to access services, the difficulty was not down to the services it was due to my own
