fixed form, made website responsive - Phase 1 complete

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="UX Portfolio for Joseph Percival" />
   <meta name="keywords" content="HTML, CSS, JavaScript" />
   <meta name="author" content="Come Together Hub - Charity Organisation Website - 
-  Designed & Developed - Joseph Percival. Final Handover- 20/11/2021"/>
+  Designed & Developed - Joseph Percival. Final Handover- 20/11/2021" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Come Together</title>
   <link rel="icon" href="img/favicon.ico" type="image/jpeg" />
@@ -151,9 +151,11 @@
         <p>
           “The true measure of any society can be found in how it treats it's most vulnerable members.” </p>
         <br><sub class="signature">- Mahatma Gandhi</sub>
+     
       </div>
+    
     </section>
-
+    <div ></div>
     <section class="editorial-card">
       <div class="card-grid_start">
         <div class="inner">
@@ -240,9 +242,9 @@
       </div>
     </section>
 
-    <section class="editorial-card">
+    <section class="editorial-card"id="events">
       <div class="card-grid_start">
-        <div id="events" class="inner">
+        <div  class="inner">
           <div class="editorial-title">
             <h1>Events</h1>
           </div>
@@ -323,7 +325,7 @@
           <div id="contactUs" class="editorial-title">
             <h1>Come And Join Us</h1>
           </div>
-          <img class="sm-image" src="/img/recruitment.jpg" alt="charity's staff members image">
+          <img class="sm-image charity-vest" src="/img/recruitment.jpg" alt="charity's staff members image">
 
           <h2>Recruitment and Partnership Opportunities</h2>
           <p class="editorial-desc_alt">
@@ -390,9 +392,9 @@
           </div>
           <div class="contact-form-container">
             <div class="left">
-              <form action="https://formsubmit.co/joseph.m.percival@gmail.com" method="POST">
+              <form action="https://formsubmit.co/matty@cometogetherhub.com" method="POST">
                 <!-- subject send to my email  -->
-                <input type="hidden" name="_subject" value="New Email From Portfolio">
+                <input type="hidden" name="_subject" value="New Email From Website">
                 <!-- page forwards to thank you page after submission  -->
                 <input type="hidden" name="_next" value="/pages/thank-you.html">
                 <div class="input-area w50">
