styled the new mobile navigation, functioning is standard, need to remove the nav once link is clicked

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="modal active">
       <div class="contact-modal-title">My Contact Details</div>
       <div class="close-modal" onClick="toggleModal()">
-        <svg class="close-icon" viewBox="2 2 20 20">
+        <svg class="close-icon" viewBox="2 2 20 20" width="20" height="20">
           <path fill="#8c3921"
             d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z" />
         </svg>
@@ -69,23 +69,30 @@
             <div class="logo-name">Come Together Hub</div>
           </div>
         </a>
+
+        <input type="checkbox"  id="nav-toggle" class="nav-toggle"/>
+
+        <label for="nav-toggle" class="nav-toggle-label">
+          <svg viewBox="0 0 24 24">
+            <path fill="#fff" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+          </svg>
+        </label>
+
         <nav>
-          <input type="checkbox" id="click" />
-          <label for="click" class="menu-btn">
-            <svg viewBox="0 0 24 24">
-              <path fill="#fff" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
-            </svg>
-          </label>
+      
+          <!-- <ul>
+            <li><a href="#welcome">Welcome</a></li>
+            <li><a href="#aboutUs">About Us</a></li>
+            <li><a href="#communityCare">Local Care</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><button type="button" class="primary-button"><a href="#contactUs">Join Us</a></button></li>
+          </ul> -->
           <ul>
             <li><a href="#welcome">Welcome</a></li>
             <li><a href="#aboutUs">About Us</a></li>
             <li><a href="#communityCare">Local Care</a></li>
             <li><a href="#events">Events</a></li>
             <li><button type="button" class="primary-button"><a href="#contactUs">Join Us</a></button></li>
-            <!-- <li><button type="button" class="primary-button">
-                <a href="/index.html">Donate</a>
-              </button>
-            </li> -->
           </ul>
         </nav>
       </header>
